@startuml

abstract class Pizza
Pizza : +prepare(): void
Pizza : +bake(): void
Pizza : +cut(): void
Pizza : +box(): void

class BJCheesePizza
class BJPepperPizza

class LDCheesePizza
class LDPepperPizza

Pizza <|-- BJCheesePizza
Pizza <|-- BJPepperPizza
Pizza <|-- LDCheesePizza
Pizza <|-- LDPepperPizza

abstract class AbsFactory
class BJFactory
class LDFactory

AbsFactory <|.. BJFactory
AbsFactory <|.. LDFactory

BJFactory ..> BJPepperPizza
BJFactory ..> BJCheesePizza
LDFactory ..> LDCheesePizza
LDFactory ..> LDPepperPizza

class OrderPizza
OrderPizza o-- AbsFactory

@enduml